Can create and update comment as a Trainer, with DTO for return